[gd_scene load_steps=12 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://flat_enviro_assets/pobrane.jpg" type="Texture" id=3]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/neina.png" type="Texture" id=5]
[ext_resource path="res://sprites/hiryu.png" type="Texture" id=6]
[ext_resource path="res://sprites/leszek.png" type="Texture" id=7]
[ext_resource path="res://cart/cart.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/tree2.png" type="Texture" id=9]
[ext_resource path="res://enemies/basic_minion/basic_minion.tscn" type="PackedScene" id=10]
[ext_resource path="res://objects/loot.tscn" type="PackedScene" id=11]

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, 3 )
scale = Vector2( 1, 0.707107 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Enviroment" type="Node" parent="."]

[node name="Ground" type="Sprite" parent="Enviroment"]
modulate = Color( 0.341176, 0.72549, 0.384314, 1 )
scale = Vector2( 100, 100 )
texture = ExtResource( 2 )

[node name="Road" type="Node2D" parent="Enviroment"]

[node name="road_1" type="Sprite" parent="Enviroment/Road"]
modulate = Color( 0.721569, 0.721569, 0.721569, 1 )
position = Vector2( 77, 35 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 100, 100, 1000, 100 )

[node name="YSort" type="YSort" parent="."]
sort_enabled = true

[node name="player_1" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 54, 96 )
player_enabled = true

[node name="player_2" parent="YSort" instance=ExtResource( 4 )]
editor/display_folded = true
position = Vector2( 164, 13.9955 )
player_enabled = true

[node name="player_sprite" parent="YSort/player_2/pivot" index="0"]
position = Vector2( -24, -80.9955 )
texture = ExtResource( 5 )

[node name="player_3" parent="YSort" instance=ExtResource( 4 )]
editor/display_folded = true
position = Vector2( -58, -12 )
player_enabled = true

[node name="player_sprite" parent="YSort/player_3/pivot" index="0"]
position = Vector2( -49, -78 )
texture = ExtResource( 6 )

[node name="player_4" parent="YSort" instance=ExtResource( 4 )]
editor/display_folded = true
position = Vector2( 95.6916, -29 )
player_enabled = true

[node name="player_sprite" parent="YSort/player_4/pivot" index="0"]
position = Vector2( -23.6916, -85 )
texture = ExtResource( 7 )

[node name="cart" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 328, 34 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.001
motion/sync_to_physics = false
speed = 50.0

[node name="tree_1" type="Sprite" parent="YSort"]
position = Vector2( 259, -23 )
texture = ExtResource( 9 )
offset = Vector2( 0, -100 )

[node name="tree_2" type="Sprite" parent="YSort"]
position = Vector2( 392, -19 )
texture = ExtResource( 9 )
offset = Vector2( 0, -100 )

[node name="tree_3" type="Sprite" parent="YSort"]
position = Vector2( 147, -11 )
texture = ExtResource( 9 )
offset = Vector2( 0, -100 )

[node name="tree_4" type="Sprite" parent="YSort"]
position = Vector2( -50, -25 )
texture = ExtResource( 9 )
offset = Vector2( 0, -100 )

[node name="basic_minion" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( -72, 71 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
motion/sync_to_physics = false
chase_speed = 75.0
run_speed = 120.0

[node name="loot" parent="." instance=ExtResource( 11 )]


[editable path="YSort/player_2"]

[editable path="YSort/player_3"]

[editable path="YSort/player_4"]
